samples/custom-bootstrap/Sample_productpage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"productpage","version":"v1"},"name":"productpage-v1","namespace":"test"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"productpage","version":"v1"}},"template":{"metadata":{"annotations":{"prometheus.io/path":"/metrics","prometheus.io/port":"9080","prometheus.io/scrape":"true"},"labels":{"app":"productpage","version":"v1"}},"spec":{"containers":[{"image":"docker.io/istio/examples-bookinfo-pro [...]
  creationTimestamp: "2024-05-08T20:59:54Z"
  generation: 4
  labels:
    app: productpage
    version: v1
  name: productpage-v1
  namespace: test
  resourceVersion: "13847055"
  uid: 5e080ede-61dd-49a9-bed0-13ef67f52ca3
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: productpage
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2024-05-08T18:43:49-03:00"
        prometheus.io/path: /metrics
        prometheus.io/port: "9080"
        prometheus.io/scrape: "true"
        sidecar.istio.io/agentLogLevel: debug
        sidecar.istio.io/bootstrapOverride: istio-custom-bootstrap-config
        sidecar.istio.io/userVolume: '[{"name":"user-volume-1","persistentVolumeClaim":{"claimName":"wasm-pv-claim"}}]'
        sidecar.istio.io/userVolumeMount: '[{"name":"user-volume-1","mountPath":"/var/opt/","readOnly":
          false}]'
      creationTimestamp: null
      labels:
        app: productpage
        version: v1
    spec:
      containers:
      - image: docker.io/istio/examples-bookinfo-productpage-v1:1.18.0
        imagePullPolicy: IfNotPresent
        name: productpage
        ports:
        - containerPort: 9080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: tmp
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: bookinfo-productpage
      serviceAccountName: bookinfo-productpage
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: tmp
status:
  conditions:
  - lastTransitionTime: "2024-05-08T20:59:55Z"
    lastUpdateTime: "2024-05-08T21:43:54Z"
    message: ReplicaSet "productpage-v1-649848f4f6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2024-05-08T23:39:48Z"
    lastUpdateTime: "2024-05-08T23:39:48Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 4
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
